# logtap

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/logtap/: aggregator.py  analyze.py  api.py  cli.py  database.py  domain.py  models.py  parse_lines.py  reporter.py  schemas.py
tests/: test_aggregator.py  test_parse_lines.py  test_reporter.py
