[project]
name = "logtap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Carroll", email = "james@jamescarroll.info" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
logtap = "logtap.cli:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "ruff>=0.15.16",
]
